[package]
name = "ash-bootstrap"
version = "0.1.3"
edition = "2024"
description = "A utility library that jump starts initialization of Vulkan via Ash"
documentation = "https://docs.rs/ash_bootstrap/latest/ash_bootstrap"
homepage = "https://github.com/Drevoed/ash-bootstrap"
repository = "https://github.com/Drevoed/ash-bootstrap"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = [
    "Kirill Mironov <vetrokm@gmail.com>"
]
categories = [
    "api-bindings",
    "external-ffi-bindings",
    "game-development",
    "graphics",
    "rendering::graphics-api"
]
keywords = [
    "vulkan",
    "ash",
    "bindings",
    "gamedev",
    "rendering"
]
# We use 2024 edition so we set the MSRV to 1.85.0
rust-version = "1.85.0"

[dependencies]
ash = { version = "0.38.0", features = ["loaded"] }
ash-window = { version = "0.13.0" }
thiserror = "2.0.12"
anyhow = "1.0.98"
raw-window-handle = { version = "0.6.2" }
tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
winit = "0.30.11"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Enables log output using tracing crate
enable_tracing = ["tracing"]

# Enables vk_khr_portability_subset and adds ENUMERATE_PORTABILITY_KHR to VkInstanceCreateInfoFlags
portability = []

default = []

[[example]]
name = "simple"
required-features = ["enable_tracing"]
