[package]
name = "vulkanalia-bootstrap"
version = "0.1.4"
edition = "2024"
description = "A utility library that jump starts initialization of Vulkan via Vulkanalia"
documentation = "https://docs.rs/vulkanalia_bootstrap/latest/vulkanalia_bootstrap"
homepage = "https://github.com/ddorstijn/vulkanalia-bootstrap"
repository = "https://github.com/ddorstijn/vulkanalia-bootstrap"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = [
    "Kirill Mironov <vetrokm@gmail.com>",
    "Danny Dorstijn <dannydorstijn1997@gmail.com>",
]
categories = [
    "api-bindings",
    "external-ffi-bindings",
    "game-development",
    "graphics",
    "rendering::graphics-api",
]
keywords = ["vulkan", "vulkanalia", "bindings", "gamedev", "rendering"]

[dependencies]
thiserror = "2.0.17"
raw-window-handle = { version = "0.6.2" }
tracing = { version = "0.1.41", optional = true }
vulkanalia = { version = "0.31.0", features = ["libloading", "window"] }
libloading = "0.8.8"

[dev-dependencies]
anyhow = "1.0.99"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
winit = "0.30.12"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Enables log output using tracing crate
enable_tracing = ["tracing"]

# Enables vk_khr_portability_subset and adds ENUMERATE_PORTABILITY_KHR to VkInstanceCreateInfoFlags
portability = []

default = []

[[example]]
name = "simple"
required-features = ["enable_tracing"]

[[example]]
name = "vk_guide"
